[tool.poetry]
name = "MerakiBackup"
version = "0.1.0"
description = "Backup Meraki Configs"
authors = ["Ricky Laney <rlaney@ineteng.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
meraki = "^1.3.0"
pyyaml = "^5.4"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.7.0"
black = "^21.5b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
